tests/compile_fail/ktstr_test_required_flags_bad_elem.rs
use ktstr::ktstr_test;

#[ktstr_test(required_flags = [42])]
fn bad(_ctx: &ktstr::scenario::Ctx) -> anyhow::Result<ktstr::assert::AssertResult> {
    Ok(ktstr::assert::AssertResult::pass())
}

fn main() {}
